# HypervisorStackGuard

./: .gitignore  README.md  Vagrantfile  generate_patch.sh  kvm.patch
docs/: notes.md
kernels/16bit_kernel/: kernel.asm
kernels/32bit_kernel/: Dockerfile  Makefile  boot.s  kernel.c  linker.ld  run.sh
kernels/32bit_kernel/llvm_pass/: Makefile
kernels/32bit_kernel/llvm_pass/bb_insert_callback/: BBInsertCallback.cpp  CMakeLists.txt
llvm_pass/: .gitignore  CMakeLists.txt  example.c
llvm_pass/bb_insert_callback/: BBInsertCallback.cpp
simple_kernel/: Makefile  kernel.asm
